// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Barcode scanner does not show the overlay when the user opts out of it 1`] = `
<BarcodeScannerOverlay
  class=""
  height={100}
  heightUnit="percentageOfParent"
  showMask={false}
  width={100}
  widthUnit="percentage"
>
  <video
    className="video"
    onCanPlay={[Function]}
  />
</BarcodeScannerOverlay>
`;

exports[`Barcode scanner shows a loading screen while waiting for the user to give persmission to access the media device 1`] = `
<BarcodeScannerOverlay
  class=""
  height={100}
  heightUnit="percentageOfParent"
  showMask={true}
  width={100}
  widthUnit="percentage"
>
  <video
    className="video"
    onCanPlay={[Function]}
  />
</BarcodeScannerOverlay>
`;

exports[`Barcode scanner the overlay structure should be correct 1`] = `
<div
  className="mx-barcode-scanner"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <div
    className="mx-barcode-scanner-content"
  >
    <div
      className="video-canvas"
    >
      <div
        className="canvas-left canvas-background"
      />
      <div
        className="canvas-middle"
      >
        <div
          className="canvas-middle-top canvas-background"
        />
        <div
          className="canvas-middle-middle"
        >
          <div
            className="corner corner-top-left"
          />
          <div
            className="corner corner-top-right"
          />
          <div
            className="corner corner-bottom-right"
          />
          <div
            className="corner corner-bottom-left"
          />
        </div>
        <div
          className="canvas-middle-bottom canvas-background"
        />
      </div>
      <div
        className="canvas-right canvas-background"
      />
    </div>
  </div>
</div>
`;
